--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -47,10 +47,10 @@
 
     <!--Terms & Conditions Page Banner Section  Start -->
     <section class="banner">
-        <div class="banner-image pages-banner-image">
+        <div class="banner-image sub-pages-banner-image">
             <img src="./assets/images/terms-banner-image.jpg" alt="image">
         </div>
-        <div class="banner-text pages-banner-text text-center">
+        <div class="banner-text sub-pages-banner-text text-center">
             <div class="banner-text-group">
                 <h1>Terms & Conditions</h1>
             </div>
