--- a/about-us.html
+++ b/about-us.html
@@ -47,10 +47,10 @@
 
     <!--About Us Page Banner Section  Start -->
     <section class="banner">
-        <div class="banner-image pages-banner-image">
+        <div class="banner-image sub-pages-banner-image">
             <img src="./assets/images/about-banner-image.jpg" alt="image">
         </div>
-        <div class="banner-text pages-banner-text text-center">
+        <div class="banner-text sub-pages-banner-text text-center">
             <div class="banner-text-group">
                 <h1>About Us</h1>
             </div>
