--- a/contact-us.html
+++ b/contact-us.html
@@ -48,10 +48,10 @@
 
     <!--Contact Us Page Banner Section  Start -->
     <section class="banner">
-        <div class="banner-image pages-banner-image">
+        <div class="banner-image sub-pages-banner-image">
             <img src="./assets/images/contact-banner-image.jpg" alt="image">
         </div>
-        <div class="banner-text pages-banner-text text-center">
+        <div class="banner-text sub-pages-banner-text text-center">
             <div class="banner-text-group">
                 <h1>Contact Us</h1>
             </div>
