--- a/return-refunds.html
+++ b/return-refunds.html
@@ -47,10 +47,10 @@
 
     <!--Return Refund Page Banner Section  Start -->
     <section class="banner">
-        <div class="banner-image pages-banner-image">
+        <div class="banner-image sub-pages-banner-image">
             <img src="./assets/images/return-banner-image.jpg" alt="image">
         </div>
-        <div class="banner-text pages-banner-text text-center">
+        <div class="banner-text sub-pages-banner-text text-center">
             <div class="banner-text-group">
                 <h1>Refunds and Returns Policy</h1>
             </div>
