--- a/tournaments-events.html
+++ b/tournaments-events.html
@@ -45,10 +45,10 @@
 
     <!--Tournaments Events Banner Section  Start -->
     <section class="banner">
-        <div class="banner-image">
+        <div class="banner-image sub-pages-banner-image">
             <img src="./assets/images/tournament-banner-image.jpg" alt="image">
         </div>
-        <div class="banner-text text-center">
+        <div class="banner-text sub-pages-banner-text text-center">
             <div class="banner-text-group">
                 <h1>Tournaments and Events</h1>
             </div>
