--- a/tournaments-events.html
+++ b/tournaments-events.html
@@ -75,7 +75,7 @@
     <!-- Tournaments Events Intro  Section End-->
 
     <!-- Tournaments Events Cards Section Start -->
-    <section class="tournaments-events-cards-section py-5">
+    <section class="tournaments-events-cards-section pb-5">
         <div class="container">
             <div class="tournaments-events-cards-wrapper">
                 <h2 class="section-heading pb-5">
