--- a/membership-information.html
+++ b/membership-information.html
@@ -45,7 +45,7 @@
     </header>
     <!-- Header End -->
 
-    <!--Privacy Policy Page Banner Section  Start -->
+    <!--Membership Info Page Banner Section  Start -->
     <section class="banner">
         <div class="banner-image sub-pages-banner-image">
             <img src="./assets/images/home-banner-image.jpg" alt="image">
@@ -56,15 +56,15 @@
             </div>
         </div>
     </section>
-    <!--Privacy Policy Banner Section  End-->
+    <!--Membership Info Banner Section  End-->
 
-    <!-- Privacy Policy Content Section Start -->
+    <!-- Membership Info Content Section Start -->
     <section class="sub-pages-content-section py-5">
         <div class="container">
             <div class="sub-pages-content-wrapper">
 
                 <div class="sub-pages-group">
-                    <h2 class="section-heading text-center">
+                    <h2 class="section-heading text-center pb-4">
                         Why Join Us?
                     </h2>
                     <p>
@@ -282,7 +282,7 @@
             </div>
         </div>
     </section>
-    <!-- Privacy Policy Content Section End -->
+    <!-- Membership Info Content Section End -->
 
     <!-- Footer Start -->
     <footer class="footer pt-5">
