--- a/contact-us.html
+++ b/contact-us.html
@@ -12,7 +12,7 @@
     <title>Contact Us</title>
 </head>
 
-<body>
+<body class="contact-page">
     <!-- Header Start -->
     <header class="site-header">
         <div class="container">
