--- a/tournaments-events.html
+++ b/tournaments-events.html
@@ -84,7 +84,7 @@
 
                 <div class="tournaments-events-cards">
                     <div class="tornaments-events-cards-image">
-                        <img src="./assets/images/senior-open.png" alt="card-images">
+                        <img src="./assets/images/tournament1.jpg" alt="card-images">
                     </div>
                     <div class="tornaments-events-cards-content">
                         <h3>
@@ -125,7 +125,7 @@
 
                 <div class="tournaments-events-cards">
                     <div class="tornaments-events-cards-image">
-                        <img src="./assets/images/senior-open.png" alt="card-images">
+                        <img src="./assets/images/tournament2.jpg" alt="card-images">
                     </div>
                     <div class="tornaments-events-cards-content">
                         <h3>
@@ -164,7 +164,7 @@
 
                 <div class="tournaments-events-cards">
                     <div class="tornaments-events-cards-image">
-                        <img src="./assets/images/senior-open.png" alt="card-images">
+                        <img src="./assets/images/tournament3.jpg" alt="card-images">
                     </div>
                     <div class="tornaments-events-cards-content">
                         <h3>
@@ -204,7 +204,7 @@
 
                 <div class="tournaments-events-cards">
                     <div class="tornaments-events-cards-image">
-                        <img src="./assets/images/senior-open.png" alt="card-images">
+                        <img src="./assets/images/LadiesInvitational.jpg" alt="card-images">
                     </div>
                     <div class="tornaments-events-cards-content">
                         <h3>
@@ -243,7 +243,7 @@
 
                 <div class="tournaments-events-cards">
                     <div class="tornaments-events-cards-image">
-                        <img src="./assets/images/senior-open.png" alt="card-images">
+                        <img src="./assets/images/tournament4.jpg" alt="card-images">
                     </div>
                     <div class="tornaments-events-cards-content">
                         <h3>
@@ -282,7 +282,7 @@
 
                 <div class="tournaments-events-cards">
                     <div class="tornaments-events-cards-image">
-                        <img src="./assets/images/senior-open.png" alt="card-images">
+                        <img src="./assets/images/tournament5.png" alt="card-images">
                     </div>
                     <div class="tornaments-events-cards-content">
                         <h3>
@@ -320,7 +320,7 @@
 
                 <div class="tournaments-events-cards">
                     <div class="tornaments-events-cards-image">
-                        <img src="./assets/images/senior-open.png" alt="card-images">
+                        <img src="./assets/images/tournament6.png" alt="card-images">
                     </div>
                     <div class="tornaments-events-cards-content">
                         <h3>
@@ -358,7 +358,7 @@
 
                 <div class="tournaments-events-cards">
                     <div class="tornaments-events-cards-image">
-                        <img src="./assets/images/senior-open.png" alt="card-images">
+                        <img src="./assets/images/tournament7.jpg" alt="card-images">
                     </div>
                     <div class="tornaments-events-cards-content">
                         <h3>
@@ -396,7 +396,7 @@
 
                 <div class="tournaments-events-cards">
                     <div class="tornaments-events-cards-image">
-                        <img src="./assets/images/senior-open.png" alt="card-images">
+                        <img src="./assets/images/tournament8.jpg" alt="card-images">
                     </div>
                     <div class="tornaments-events-cards-content">
                         <h3>
