--- a/tournaments-events.html
+++ b/tournaments-events.html
@@ -435,7 +435,7 @@
 
                 <div class="tournaments-events-cards">
                     <div class="tornaments-events-cards-image">
-                        <img src="./assets/images/senior-open.png" alt="card-images">
+                        <img src="./assets/images/tournament9.jpg" alt="card-images">
                     </div>
                     <div class="tornaments-events-cards-content">
                         <h3>
@@ -473,7 +473,7 @@
 
                 <div class="tournaments-events-cards">
                     <div class="tornaments-events-cards-image">
-                        <img src="./assets/images/senior-open.png" alt="card-images">
+                        <img src="./assets/images/tournament10.jpg" alt="card-images">
                     </div>
                     <div class="tornaments-events-cards-content">
                         <h3>
