--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="how-play">
                     <ul>
-                        <li><a class="mobile-hide contact-us-btn butn" href="contact-us"><i
+                        <li><a class="mobile-hide butn" href="contact-us"><i
                                     class="fa-solid fa-phone phone"></i>Contact Us</a></li>
                     </ul>
                 </div>
@@ -440,7 +440,7 @@
 
 
     <!-- Cookies Start -->
-    <!-- <div class="wrapper">
+    <div class="wrapper">
         <div class="info">
             <p>
                 This website uses cookies to give you the best possible experience of our websites. Cookies help us
@@ -452,7 +452,7 @@
             <button class="button" id="acceptBtn">Accept Cookies</button>
             <button class="button">Reject Cookies</button>
         </div>
-    </div> -->
+    </div>
     <!-- Cookies End-->
 
     <script src="assets/js/aos.js"></script>
