--- a/tournaments-events.html
+++ b/tournaments-events.html
@@ -27,7 +27,7 @@
                         <li><a class="active" href="tournaments-events">Tournaments and Events</a></li>
                         <li><a href="membership-information">Membership Information</a></li>
                         <li><a href="about-us">About Us</a></li>
-                        <li><a class="desktop-hide contact-us-btn butn" href="contact-us">Contact Us</a></li>
+                        <li><a class="desktop-hide butn" href="contact-us">Contact Us</a></li>
                     </ul>
                     <div class="close-icon"><i class="fa-solid fa-x"></i></div>
                 </div>
