--- a/index.html
+++ b/index.html
@@ -304,16 +304,16 @@
                 <form class="contact-form">
                     <div class="formbold-mb-5">
                         <input type="text" name="name" id="name" placeholder="Enter Your Name"
-                            class="formbold-form-input" />
+                            class="formbold-form-input">
                     </div>
 
                     <div class="formbold-mb-5">
                         <input type="email" name="email" id="email" placeholder="Enter Your Email"
-                            class="formbold-form-input" />
+                            class="formbold-form-input">
                     </div>
                     <div class="formbold-mb-5">
                         <input type="text" name="subject" id="subject" placeholder="Enter Subject"
-                            class="formbold-form-input" />
+                            class="formbold-form-input">
                     </div>
 
                     <div class="formbold-mb-5">
@@ -347,7 +347,7 @@
                 <p>
                     <span class="heading-like">Membership and Pricing: </span>
                     Membership details, pricing, and benefits described on this site are subject to change without
-                    notice. For the most current information, please contact us directly via email at <a href="mailto: info@q-snooker.com">info@q-snooker.com.</a>                
+                    notice. For the most current information, please contact us directly via email at <a href="mailto:info@q-snooker.com">info@q-snooker.com.</a>                
                 </p>
 
                 <p>
@@ -381,7 +381,7 @@
                 </p>
                 <p>
                     For any questions or concerns about the content of this website, please contact us at
-                    <a href="mailto: info@q-snooker.com">info@q-snooker.com.</a> 
+                    <a href="mailto:info@q-snooker.com">info@q-snooker.com.</a> 
                 </p>
             </div>
         </div>
