--- a/tournaments-events.html
+++ b/tournaments-events.html
@@ -540,7 +540,7 @@
     <!-- Tournament Help Us Section End -->
 
     <!--Tournament Page FAQ Section Start -->
-    <section class="pages-faq-section">
+    <section class="pages-faq-section pt-5">
         <div class="container">
             <div class="pages-accordion-wrapper">
                 <h2 class="section-heading text-center">FAQ's</h2>
