--- a/tournaments-events.html
+++ b/tournaments-events.html
@@ -836,7 +836,7 @@
             <div class="footer-map pb-5">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2581.7495609422276!2d-124.98366782348803!3d49.67785597145502!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548813809dadab8f%3A0xec5811924b89cba3!2s2355%20Mansfield%20Dr%2C%20Courtenay%2C%20BC%20V9N%202M2%2C%20Canada!5e0!3m2!1sen!2sin!4v1727355421402!5m2!1sen!2sin"
-                    max-width="2560px" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                     width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="footer-wrapper">
