--- a/contact-us.html
+++ b/contact-us.html
@@ -152,16 +152,16 @@
                                 <form class="contact-form">
                                     <div class="formbold-mb-5">
                                         <input type="text" name="name" id="name" placeholder="Enter Your Name"
-                                            class="formbold-form-input" />
+                                            class="formbold-form-input">
                                     </div>
 
                                     <div class="formbold-mb-5">
                                         <input type="email" name="email" id="email" placeholder="Enter Your Email"
-                                            class="formbold-form-input" />
+                                            class="formbold-form-input">
                                     </div>
                                     <div class="formbold-mb-5">
                                         <input type="text" name="subject" id="subject" placeholder="Enter Subject"
-                                            class="formbold-form-input" />
+                                            class="formbold-form-input">
                                     </div>
 
                                     <div class="formbold-mb-5">
