--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="how-play">
                     <ul>
-                        <li><a class="mobile-hide butn" href="contact-us"><i
+                        <li><a class="mobile-hide butn contact-us-btn" href="contact-us"><i
                                     class="fa-solid fa-phone phone"></i>Contact Us</a></li>
                     </ul>
                 </div>
