--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -26,7 +26,7 @@
                         <li><a href="./">Home</a></li>
                         <li><a href="tournaments-events">Tournaments and Events</a></li>
                         <li><a href="membership-information">Membership Information</a></li>
-                        <li><a class="active" href="about-us">About Us</a></li>
+                        <li><a href="about-us">About Us</a></li>
                         <li><a class="desktop-hide butn" href="contact-us">Contact Us</a></li>
                     </ul>
                     <div class="close-icon"><i class="fa-solid fa-x"></i></div>
